<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.example.mediseek.ClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_pharmacy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/mainColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|bottom"
                android:padding="24dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/a001"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pharmacy"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_medicine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/green">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|bottom"
                android:padding="24dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/c003"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</RelativeLayout>